--- a/package.json
+++ b/package.json
@@ -6,5 +6,10 @@
   },
   "devDependencies": {
     "concurrently": "^8.2.2"
+  },
+  "dependencies": {
+    "framer-motion": "^12.23.12",
+    "lucide-react": "^0.539.0",
+    "motion": "^12.23.12"
   }
 }
