--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "concurrently": "^8.2.2"
   },
   "dependencies": {
+    "@google/genai": "^1.19.0",
+    "@google/generative-ai": "^0.24.1",
+    "@mlc-ai/web-llm": "^0.2.79",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.539.0",
     "motion": "^12.23.12"
